@startuml Avito Service Task

class UserAccount {
    Id : SERIAL PRIMARY KEY
    Email : VARCHAR(50), NOT NULL
    PasswordHash : VARCHAR(50), NOT NULL
    UserTypeId : INTEGER, NOT NULL
}

class UserType {
    Id : SERIAL PRIMARY KEY
    Title: TEXT, UNIQUE, NOT NULL
}

class House {
    Id : SERIAL PRIMARY KEY
    Address : Text, UNIQUE, NOT NULL
    YearOfConstruction : SMALLINT, NOT NULL
    DeveloperId : INTEGER, NULLABLE
    InsertedAt: TIMESTAMPTZ, NOT NULL, DEFAULT VALUE
    LastFlatAddedAt: TIMESTAMPTZ, NOT NULL, TRIGGER?
}

class Developer {
    {static} Id : SERIAL PRIMARY KEY  
    Title: TEXT, UNIQUE, NOT NULL
}

class Status {
    {static} Id : SERIAL PRIMARY KEY 
    Title: TEXT, UNIQUE, NOT NULL
}

'Для квартиры ключ должен быть составным, по HouseId и Number. При этом поиск по HouseId должен быть быстрым
class Flat {
    HouseId: INTEGER, KEY
    Number : SMALLINT, KEY
    Price : BIGINT, NOT NULL
    NumberOfRooms : SMALLINT, NOT NULL
    StatusId : INTEGER, NOT NULL
}

UserType "1" <-- "M" UserAccount 
Developer "1" <-- "M" House 
House "1" <-- "1" Flat 

@enduml